Force overflow:visible on html/body to fix Chrome window sizing

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,14 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 @import "bootstrap/bootstrap";
+@import "spinner";
+@import "utils";
+@import "rtl";
+@import "responsive";
 
 html, body {
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
+    overflow: visible !important;
     background-color: #222222;
 }
-@import "spinner";
-@import "utils";
-@import "rtl";
-@import "responsive";
